core: add setsockopt parsing infrastructure
This commit add functionality to parse socket options and
set the options at the right place. Furthermore, this patch shifts all
shared functionality from the global header file to a shared c file -
called shared.c

Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -27,11 +27,11 @@ clean:
 %: %.c Makefile global.h
 	$(CC) $(CFLAGS) $(CWARNINGS) -o $@ $<
 
-client: ../src/client.c
-	$(CC) $(CFLAGS) $(CWARNINGS) -o client ../src/client.c
+client: ../src/client.c ../src/shared.c
+	$(CC) $(CFLAGS) $(CWARNINGS) -o client ../src/client.c ../src/shared.c
 
-server: ../src/server.c
-	$(CC) $(CFLAGS) $(CWARNINGS) -o server ../src/server.c
+server: ../src/server.c ../src/shared.c
+	$(CC) $(CFLAGS) $(CWARNINGS) -o server ../src/server.c ../src/shared.c
 
 cscope:
 	cscope -R -b
