windows: rename output files and add paths
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/win/client/client.vcproj
+++ b/win/client/client.vcproj
@@ -43,9 +43,9 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
-				WarningLevel="3"
+				WarningLevel="4"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 				CompileAs="1"
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile="$(OutDir)\ipproof-client.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -182,6 +183,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\getopt.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared.c"
 				>
 			</File>
 		</Filter>
