--- a/win/server/server.vcproj
+++ b/win/server/server.vcproj
@@ -43,7 +43,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile="$(OutDir)\ipproof-server.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -182,6 +183,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\server.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\shared.c"
 				>
 			</File>
 		</Filter>
