ignore windows generated files
Signed-off-by: Hagen Paul Pfeifer <hagen.pfeifer@rohde-schwarz.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,20 @@ win/server/server.vcxproj
 win/server/server.vcxproj.filters
 win/upgradelog.htm
 win/win.v11.suo
+
+ALL_BUILD.vcxproj
+ALL_BUILD.vcxproj.filters
+CMakeCache.txt
+CMakeFiles/
+Debug/
+Win32/
+ZERO_CHECK.vcxproj
+ZERO_CHECK.vcxproj.filters
+cmake_install.cmake
+ipproof-client.dir/
+ipproof-client.vcxproj
+ipproof-client.vcxproj.filters
+ipproof-server.dir/
+ipproof-server.vcxproj
+ipproof-server.vcxproj.filters
+ipproof.sln
